# file-indexer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.sqlx/: query-082e4a6118a8c1903b670bb137f63e94596d5f03359d0985894313b4a856eedd.json  query-0a9fa5cec1f8af8888cad3f57eeb3468e3f7c58b97a4d4589b6834f4150d9950.json  query-1b97cd0edea8ef0efaa1cc5d7c38e290c3363f9af08b90bf417496e262b4a2d8.json  query-1dd1866e357b46a0c5cc82ccc9a9c0117a08ae69867f1605a377d40aff977c99.json  query-22e8b85787852f1e97f563b0668406e10b34391fec2664ecccf2800e657633d8.json  query-32b2506bfb4484d4e9e9ec4bf85237e660bde7ccb17ca9ed82a1d8977a5f27fb.json  query-3aa5c2f99ccac6ba3f1a5e24d9ec9d88c3bbf77ca83b3f4461d24eca5a3c2fc0.json  query-3e03e2e1a8aabde8360cbf40967115d41b5fc1db33ce0b2e515449604516bcc6.json  query-64ba007dc133d50159e1039c8a510aa1710178b317392fcb4e14c29b5e8a5fa0.json  query-66501da0c7720a4ec2979512d2697295c88fe758fe50879b43c63682126e4d49.json  query-6c609fa3da6425d35f51e36ad4282197cbf8e279f9e2bd80850735e7e548ee43.json  query-737bee65636f6eb4715d0cc46b3515cfa4cd011a5b99561bf8dcff888b62dca2.json  query-73dc7e2dfecac418bce7ec93e34c1ff02ff9a8d65a55be2d1642f6ec4a978749.json  query-873660f67d7fe6d9ddeb137487b876dc1c180907d7570e41d5077ea9badb4f79.json  query-9162832c354e2dd00c89951aa914a94249909917b27ecfd7c210c58c53210e24.json  query-933059adfc8c1e4d46a2114f36892ca1669cc1b800a434754c64eacbab17fa9e.json  query-95ce48cb8ec34f3e29a7ae53dfd829a9d21254b69d54a6e8265269132147d506.json  query-a5dca539cdd6bc31ae9290d2559aa89648aef807a5b402cf72dd3fc939faec77.json  query-a7c48b1e2b57fa34ad48655f6b7e7a04263dde426e4e81efd6a13feae29029b8.json  query-abac0eedce5c7e4d284b879672f06b60efdb9be7e3564a6d58143b277111490d.json  query-ae472578a086a90c8b4d43c15b4fc7f834a3dd61c7a4ecfb39c597528423d403.json  (+8 more)
src/: db.rs  fairings.rs  main.rs  (+3 more)
(+42 files in other folders)
