[package]
name = "file-indexer"
version = "0.2.1"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
meilisearch-sdk = "0.27"
ring = { version = "0.17", features = ["std"] }
rocket = { version = "0.5", features = ["json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4", "zerocopy"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
